<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tbbackg"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.timburtonquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutBackground"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding">

        <TextView
            style="@style/WelcomeStyle"
            android:text="@string/welcome" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question1" />

        <TextView
            style="@style/HelpStyle"
            android:text="@string/help" />

        <CheckBox
            android:id="@+id/checkbox1"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/checkbox2"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox2" />

        <CheckBox
            android:id="@+id/checkbox3"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox3" />

        <CheckBox
            android:id="@+id/checkbox4"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox4" />

        <CheckBox
            android:id="@+id/checkbox5"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox5" />

        <CheckBox
            android:id="@+id/checkbox6"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox6" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                style="@style/RadioButtonStyle"
                android:text="@string/radio1" />

            <RadioButton
                android:id="@+id/radio2"
                style="@style/RadioButtonStyle"
                android:text="@string/radio2" />

            <RadioButton
                android:id="@+id/radio3"
                style="@style/RadioButtonStyle"
                android:text="@string/radio3" />

            <RadioButton
                android:id="@+id/radio4"
                style="@style/RadioButtonStyle"
                android:text="@string/radio4" />

            <RadioButton
                android:id="@+id/radio5"
                style="@style/RadioButtonStyle"
                android:text="@string/radio5" />
        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question3" />

        <EditText
            android:id="@+id/sweeney"
            style="@style/EdittextStyle"
            android:hint="@string/hint" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question4" />

        <TextView
            style="@style/HelpStyle"
            android:text="@string/help" />

        <CheckBox
            android:id="@+id/checkbox7"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox7" />

        <CheckBox
            android:id="@+id/checkbox8"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox8" />

        <CheckBox
            android:id="@+id/checkbox9"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox9" />

        <CheckBox
            android:id="@+id/checkbox10"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox10" />

        <CheckBox
            android:id="@+id/checkbox11"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox11" />

        <CheckBox
            android:id="@+id/checkbox12"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox12" />

        <CheckBox
            android:id="@+id/checkbox13"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox13" />

        <CheckBox
            android:id="@+id/checkbox14"
            style="@style/CheckboxStyle"
            android:text="@string/checkbox14" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio6"
                style="@style/RadioButtonStyle"
                android:text="@string/radio6" />

            <RadioButton
                android:id="@+id/radio7"
                style="@style/RadioButtonStyle"
                android:text="@string/radio7" />

            <RadioButton
                android:id="@+id/radio8"
                style="@style/RadioButtonStyle"
                android:text="@string/radio8" />

            <RadioButton
                android:id="@+id/radio9"
                style="@style/RadioButtonStyle"
                android:text="@string/radio9" />

            <RadioButton
                android:id="@+id/radio10"
                style="@style/RadioButtonStyle"
                android:text="@string/radio10" />

            <RadioButton
                android:id="@+id/radio11"
                style="@style/RadioButtonStyle"
                android:text="@string/radio11" />
        </RadioGroup>

        <TextView
            style="@style/ThankYouStyle"
            android:text="@string/thankYou" />

        <Button
            android:id="@+id/submit"
            style="@style/ButtonStyle"
            android:onClick="submitAnswer"
            android:text="@string/button1" />

        <Button
            android:id="@+id/restart"
            style="@style/ButtonStyle"
            android:onClick="restartQuiz"
            android:text="@string/button2" />
    </LinearLayout>

</ScrollView>
